refactor: use newest Java conventions (#111)