@@ -54,7 +54,7 @@ public abstract class AbstractCreationAndUpdateRdfTests extends CreationAndUpdat
     }
 
     public String createResourceFromShape(String shapeUri) throws IOException {
-        logger.debug(String.format("Creating resource from shape <%s>", shapeUri));
+        logger.debug("Creating resource from shape <%s>".formatted(shapeUri));
         Model m = ModelFactory.createDefaultModel();
         createResourceFromShape(m, shapeUri, 1);
 
@@ -191,7 +191,7 @@ public abstract class AbstractCreationAndUpdateRdfTests extends CreationAndUpdat
         }
 
         if (allowedValues.size() == 1) {
-            return allowedValues.get(0).getObject();
+            return allowedValues.getFirst().getObject();
         }
 
         if (allowedValues.size() == 2) {
